Working version, probably final, very hacked together

--- a/demoNeuralNet.html
+++ b/demoNeuralNet.html
@@ -8,6 +8,8 @@
 
 <body>
 
+<h1> An Artificial Neural Network that understands Tic Tac Toe </h1>
+
 <script type="text/javascript" src="TicTacToe.js"></script>
 
 
